# romanian-legislative-kg

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
data/raw_laws/: SOURCES.md  hg_214_2026.meta.json  hg_214_2026.txt  hg_24_2026.meta.json  hg_24_2026.txt  lege_190_2018.meta.json  lege_190_2018.txt  lege_24_2000.meta.json  lege_24_2000.txt  lege_53_2003.meta.json  lege_53_2003.txt  oug_13_2026.meta.json  oug_13_2026.txt  oug_156_2024.meta.json  oug_156_2024.txt  oug_5_2026.meta.json  oug_5_2026.txt
data/synthetic_docs/: doc_invalid.json  doc_valid.json
scripts/: compare_documents.py  generate_meta.py  validate_pipeline.py
src/: __init__.py  article_splitter.py  config.py  cross_reference_extractor.py  data_loader.py  document_graph.py  eda.py  entity_canonicalizer.py  graph_builder.py  knowledge_base.py  law_id_resolver.py  law_loader.py  legislative_generator.py  llm_handler.py  ontology.py  pronoun_resolver.py  relation_vocabulary.py  similarity.py  text_normalizer.py
tests/: test_law_id_resolver.py  test_triple_metadata.py
