[project]
name = "romanian-legislative-kg"
version = "2.0.0"
description = "Romanian Legislative Knowledge Graph Analysis System"
authors = [{name = "Maria"}]
requires-python = ">=3.8"

[tool.ruff]
# Set the maximum line length
line-length = 100

# Assume Python 3.8+
target-version = "py38"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    "output",
    "chroma_local_db",
    "legislative_knowledge_db",
]

# Files to include
extend-include = ["*.py"]

[tool.ruff.lint]
# Enable common linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]

# Ignore specific rules if needed
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/llm_handler.py" = ["E501"]
"src/legislative_generator.py" = ["E501"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"
